# ojcmp

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml  test.yml
benches/: n_random.rs
src/: byte_read.rs  byte_reader.rs  chars.rs  compare.rs  error.rs  lib.rs  main.rs  one_mut.rs  test.rs
src/compare/: float.rs  mod.rs  normal.rs  strict.rs
src/comparers/: mod.rs  normal.rs  spj_float.rs  strict.rs
