[package]
name = "ojcmp"
version = "0.3.2-dev"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
license = "MIT"
description = "online judge comparer"
repository = "https://github.com/ThinkSpiritLab/ojcmp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
lexical-core = "0.7.4"
anyhow = "1.0.32"
libc = "0.2.81"

[dev-dependencies]
rand = "0.7.3"
criterion = "0.3.3"

[[bench]]
name = "n_random"
harness = false
