[package]
name = "ojcmp"
version = "0.3.2"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
license = "MIT"
description = "online judge comparer"
repository = "https://github.com/ThinkSpiritLab/ojcmp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
lexical-core = "0.7.5"
anyhow = "1.0.38"
libc = "0.2.90"

[dev-dependencies]
rand = "0.8.3"
criterion = "0.3.4"

[[bench]]
name = "n_random"
harness = false
