[package]
name = "ojcmp"
version = "0.4.1-dev"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
license = "MIT"
description = "online judge comparer"
repository = "https://github.com/ThinkSpiritLab/ojcmp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
lexical-core = "0.8.0"
anyhow = "1.0"
libc = "0.2"

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3.5"

[[bench]]
name = "n_random"
harness = false
